example/out1.pO83_CORR.reverse.out1.hist_scatter_line.gff
NC_017659.1	add	ylabel	8061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.3.GC.ylabel+;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick0.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick0;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick1.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick1;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick2.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick2;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick3.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick3;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick4.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick4;
NC_017659.1	add	ytick	7061	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick5.hgrid;
NC_017659.1	add	ytick	8060	8061	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.7061.8061.GC.ytickbackbone3.tick5;
NC_017659.1	add	hist_scatter_line	7061	7160	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.0.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7161	7260	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.1.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7261	7360	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.2.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7361	7460	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.3.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7461	7560	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.4.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7561	7660	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.5.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7661	7760	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.6.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7761	7860	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.7.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7861	7960	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.8.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	7961	8060	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.2.GC.9.3.7061.8061.0;
NC_017659.1	add	hist_scatter_line	1000	1099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.0.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1100	1199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.1.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1200	1299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.2.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1300	1399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.3.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1400	1499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.4.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1500	1599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.5.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1600	1699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.6.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1700	1799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.7.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1800	1899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.8.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	1900	1999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.9.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2000	2099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.10.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2100	2199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.11.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2200	2299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.12.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2300	2399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.13.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2400	2499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.14.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2500	2599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.15.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2600	2699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.16.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2700	2799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.17.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2800	2899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.18.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	2900	2999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.19.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3000	3099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.20.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3100	3199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.21.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3200	3299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.22.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3300	3399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.23.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3400	3499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.24.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3500	3599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.25.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3600	3699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.26.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3700	3799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.27.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3800	3899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.28.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	3900	3999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.29.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4000	4099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.30.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4100	4199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.31.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4200	4299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.32.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4300	4399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.33.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4400	4499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.34.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4500	4599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.35.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4600	4699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.36.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4700	4799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.37.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4800	4899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.38.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	4900	4999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.39.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5000	5099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.40.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5100	5199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.41.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5200	5299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.42.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5300	5399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.43.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5400	5499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.44.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5500	5599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.45.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5600	5699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.46.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5700	5799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.47.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5800	5899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.48.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	5900	5999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.49.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6000	6099	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.50.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6100	6199	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.51.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6200	6299	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.52.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6300	6399	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.53.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6400	6499	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.54.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6500	6599	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.55.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6600	6699	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.56.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6700	6799	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.57.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6800	6899	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.58.3.1000.7060.0;
NC_017659.1	add	hist_scatter_line	6900	6999	.	+	.	ID=pO83_CORR.reverse.NC_017659.1.1.GC.59.3.1000.7060.0;
